--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <p>
         Here we shall go over one of my interests also known as NASCAR, one of the most thrilling motorsport in the US.
         I have been a fan of NASCAR for over ten years now and I hope to share my passion with you by going over their history,
-        how I'm became a fan and some of my favorite drivers, schemes and coincidently my favorite teams.
+        how I became a fan and some of my favorite drivers, schemes and, coincidentally my favorite teams.
       </p>
 <div class="image-row">
   <img src="images/IMG_7584.jpeg" alt="KANSAS">
@@ -40,4 +40,5 @@
     <p>&copy; COMP484 Project #1</p>
   </footer>
 </body>
+
 </html>
