--- a/favorite.html
+++ b/favorite.html
@@ -22,7 +22,7 @@
   <main>
     <article>
       <h1>Favorites</h1>
-      <p>Below is where I list some of my favorite drivers, schemes and conincidently my favorite teams in NASCAR.</p>
+      <p>Below is where I list some of my favorite drivers, schemes and coincidentally my favorite teams in NASCAR.</p>
     </article>
 
     <section id="favorite-drivers">
@@ -131,4 +131,5 @@
     <p>&copy; COMP484 Project #1</p>
   </footer>
 </body>
+
 </html>
